fix(brigadier): skip flag node when greedy Descendant in scope